// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioPlayer component tests snapshot showNextAndPreviousControls prop 1`] = `
<div
  class="sc-iBYQkv epJYkP"
  data-testid="audio-player"
  tabindex="0"
  title="audio-player"
>
  <audio
    src="abc.mp3"
    title="audio"
  >
    <source
      src="abc.ogg"
      type="audio/ogg"
    />
  </audio>
  <div
    class="sc-jrcTuL gdvQdq"
    data-testid="track-info"
  >
    <p
      class="sc-kDvujY laHBME"
      data-testid="track-name"
    />
    <p
      class="sc-ipEyDJ"
      data-testid="track-artist"
    />
  </div>
  <time
    class="sc-pyfCe iGkLUT"
    data-testid="time-bar"
  >
    00:00
    /
    00:00
  </time>
  <div
    class="sc-gKPRtg mrZYI sc-ftTHYK frwixp"
    data-testid="range-slider"
  >
    <input
      style="--progress-percent: 0%;"
      type="range"
    />
  </div>
  <div
    class="sc-gswNZR ipfQzw"
    data-testid="audio-controls"
  >
    <div
      class="sc-dkrFOg ccDDgC"
      data-testid="main-controls"
    >
      <button
        class="sc-hLBbgP eWuHc"
        data-testid="button"
      >
        <svg />
        prev track
      </button>
      <button
        class="sc-hLBbgP eWuHc"
        data-testid="button"
      >
        <svg />
        play
      </button>
      <button
        class="sc-hLBbgP eWuHc"
        data-testid="button"
      >
        <svg />
        next track
      </button>
    </div>
    <div
      class="sc-jSUZER jBXoGo"
      data-testid="volume-controls"
    >
      <button
        class="sc-hLBbgP djRQit"
        data-testid="button"
      >
        <svg />
        mute
      </button>
      <div
        class="sc-gKPRtg mrZYI"
        data-testid="range-slider"
      >
        <input
          style="--progress-percent: 50%;"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AudioPlayer component tests snapshot src & sources props 1`] = `
<div
  class="sc-iBYQkv epJYkP"
  data-testid="audio-player"
  tabindex="0"
  title="audio-player"
>
  <audio
    src="test.wav"
    title="audio"
  >
    <source
      src="test2.ogg"
      type="audio/ogg"
    />
    <source
      src="test3.mp3"
      type="audio/mp3"
    />
  </audio>
  <div
    class="sc-jrcTuL gdvQdq"
    data-testid="track-info"
  >
    <p
      class="sc-kDvujY laHBME"
      data-testid="track-name"
    />
    <p
      class="sc-ipEyDJ"
      data-testid="track-artist"
    />
  </div>
  <time
    class="sc-pyfCe iGkLUT"
    data-testid="time-bar"
  >
    00:00
    /
    00:00
  </time>
  <div
    class="sc-gKPRtg mrZYI sc-ftTHYK frwixp"
    data-testid="range-slider"
  >
    <input
      style="--progress-percent: 0%;"
      type="range"
    />
  </div>
  <div
    class="sc-gswNZR ipfQzw"
    data-testid="audio-controls"
  >
    <div
      class="sc-dkrFOg gMtPZj"
      data-testid="main-controls"
    >
      <button
        class="sc-hLBbgP eWuHc"
        data-testid="button"
      >
        <svg />
        play
      </button>
    </div>
    <div
      class="sc-jSUZER jBXoGo"
      data-testid="volume-controls"
    >
      <button
        class="sc-hLBbgP djRQit"
        data-testid="button"
      >
        <svg />
        mute
      </button>
      <div
        class="sc-gKPRtg mrZYI"
        data-testid="range-slider"
      >
        <input
          style="--progress-percent: 50%;"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AudioPlayer component tests snapshot src prop 1`] = `
<div
  class="sc-iBYQkv epJYkP"
  data-testid="audio-player"
  tabindex="0"
  title="audio-player"
>
  <audio
    src="test.wav"
    title="audio"
  >
    <source
      src="abc.ogg"
      type="audio/ogg"
    />
  </audio>
  <div
    class="sc-jrcTuL gdvQdq"
    data-testid="track-info"
  >
    <p
      class="sc-kDvujY laHBME"
      data-testid="track-name"
    />
    <p
      class="sc-ipEyDJ"
      data-testid="track-artist"
    />
  </div>
  <time
    class="sc-pyfCe iGkLUT"
    data-testid="time-bar"
  >
    00:00
    /
    00:00
  </time>
  <div
    class="sc-gKPRtg mrZYI sc-ftTHYK frwixp"
    data-testid="range-slider"
  >
    <input
      style="--progress-percent: 0%;"
      type="range"
    />
  </div>
  <div
    class="sc-gswNZR ipfQzw"
    data-testid="audio-controls"
  >
    <div
      class="sc-dkrFOg gMtPZj"
      data-testid="main-controls"
    >
      <button
        class="sc-hLBbgP eWuHc"
        data-testid="button"
      >
        <svg />
        play
      </button>
    </div>
    <div
      class="sc-jSUZER jBXoGo"
      data-testid="volume-controls"
    >
      <button
        class="sc-hLBbgP djRQit"
        data-testid="button"
      >
        <svg />
        mute
      </button>
      <div
        class="sc-gKPRtg mrZYI"
        data-testid="range-slider"
      >
        <input
          style="--progress-percent: 50%;"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AudioPlayer component tests snapshot with all the props affecting the UI 1`] = `
<div
  class="sc-iBYQkv epJYkP"
  data-testid="audio-player"
  tabindex="0"
  title="audio-player"
>
  <audio
    src="greatsong.mp3"
    title="audio"
  >
    <source
      src="greatsong.wav"
      type="audio/wav"
    />
  </audio>
  <div
    class="sc-jrcTuL gdvQdq"
    data-testid="track-info"
  >
    <p
      class="sc-kDvujY laHBME"
      data-testid="track-name"
    >
      track
    </p>
    <p
      class="sc-ipEyDJ"
      data-testid="track-artist"
    >
      artist
    </p>
  </div>
  <time
    class="sc-pyfCe iGkLUT"
    data-testid="time-bar"
  >
    00:00
    /
    00:00
  </time>
  <div
    class="sc-gKPRtg mrZYI sc-ftTHYK frwixp"
    data-testid="range-slider"
  >
    <input
      style="--progress-percent: 0%;"
      type="range"
    />
  </div>
  <div
    class="sc-gswNZR ipfQzw"
    data-testid="audio-controls"
  >
    <div
      class="sc-dkrFOg ccDDgC"
      data-testid="main-controls"
    >
      <button
        class="sc-hLBbgP eWuHc"
        data-testid="button"
      >
        <svg />
        prev track
      </button>
      <button
        class="sc-hLBbgP eWuHc"
        data-testid="button"
      >
        <svg />
        play
      </button>
      <button
        class="sc-hLBbgP eWuHc"
        data-testid="button"
      >
        <svg />
        next track
      </button>
    </div>
    <div
      class="sc-jSUZER jBXoGo"
      data-testid="volume-controls"
    >
      <button
        class="sc-hLBbgP djRQit"
        data-testid="button"
      >
        <svg />
        mute
      </button>
      <div
        class="sc-gKPRtg mrZYI"
        data-testid="range-slider"
      >
        <input
          style="--progress-percent: 50%;"
          type="range"
          value="50"
        />
      </div>
    </div>
    <div
      class="sc-bcXHqe fDkhxT"
      data-testid="additional-controls"
    >
      <button
        class="sc-hLBbgP djRQit"
        data-testid="button"
        download=""
        href="greatsong.mp3"
      >
        <svg />
        download track
      </button>
      <button
        aria-label="current playback rate"
        class="sc-hLBbgP bbygWe sc-eDvSVe eCTlAt"
        data-testid="button"
      >
        1x
      </button>
      <button
        class="sc-hLBbgP djRQit"
        data-testid="button"
      >
        <svg />
        repeat song infinite
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioPlayer component tests snapshot with default prop values 1`] = `
<div
  class="sc-iBYQkv epJYkP"
  data-testid="audio-player"
  tabindex="0"
  title="audio-player"
>
  <audio
    src="abc.mp3"
    title="audio"
  >
    <source
      src="abc.ogg"
      type="audio/ogg"
    />
  </audio>
  <div
    class="sc-jrcTuL gdvQdq"
    data-testid="track-info"
  >
    <p
      class="sc-kDvujY laHBME"
      data-testid="track-name"
    />
    <p
      class="sc-ipEyDJ"
      data-testid="track-artist"
    />
  </div>
  <time
    class="sc-pyfCe iGkLUT"
    data-testid="time-bar"
  >
    00:00
    /
    00:00
  </time>
  <div
    class="sc-gKPRtg mrZYI sc-ftTHYK frwixp"
    data-testid="range-slider"
  >
    <input
      style="--progress-percent: 0%;"
      type="range"
    />
  </div>
  <div
    class="sc-gswNZR ipfQzw"
    data-testid="audio-controls"
  >
    <div
      class="sc-dkrFOg gMtPZj"
      data-testid="main-controls"
    >
      <button
        class="sc-hLBbgP eWuHc"
        data-testid="button"
      >
        <svg />
        play
      </button>
    </div>
    <div
      class="sc-jSUZER jBXoGo"
      data-testid="volume-controls"
    >
      <button
        class="sc-hLBbgP djRQit"
        data-testid="button"
      >
        <svg />
        mute
      </button>
      <div
        class="sc-gKPRtg mrZYI"
        data-testid="range-slider"
      >
        <input
          style="--progress-percent: 50%;"
          type="range"
          value="50"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AudioPlayer component tests snapshot with showDownloadControl prop 1`] = `
<div
  class="sc-iBYQkv epJYkP"
  data-testid="audio-player"
  tabindex="0"
  title="audio-player"
>
  <audio
    src="abc.mp3"
    title="audio"
  >
    <source
      src="abc.ogg"
      type="audio/ogg"
    />
  </audio>
  <div
    class="sc-jrcTuL gdvQdq"
    data-testid="track-info"
  >
    <p
      class="sc-kDvujY laHBME"
      data-testid="track-name"
    />
    <p
      class="sc-ipEyDJ"
      data-testid="track-artist"
    />
  </div>
  <time
    class="sc-pyfCe iGkLUT"
    data-testid="time-bar"
  >
    00:00
    /
    00:00
  </time>
  <div
    class="sc-gKPRtg mrZYI sc-ftTHYK frwixp"
    data-testid="range-slider"
  >
    <input
      style="--progress-percent: 0%;"
      type="range"
    />
  </div>
  <div
    class="sc-gswNZR ipfQzw"
    data-testid="audio-controls"
  >
    <div
      class="sc-dkrFOg gMtPZj"
      data-testid="main-controls"
    >
      <button
        class="sc-hLBbgP eWuHc"
        data-testid="button"
      >
        <svg />
        play
      </button>
    </div>
    <div
      class="sc-jSUZER jBXoGo"
      data-testid="volume-controls"
    >
      <button
        class="sc-hLBbgP djRQit"
        data-testid="button"
      >
        <svg />
        mute
      </button>
      <div
        class="sc-gKPRtg mrZYI"
        data-testid="range-slider"
      >
        <input
          style="--progress-percent: 50%;"
          type="range"
          value="50"
        />
      </div>
    </div>
    <div
      class="sc-bcXHqe fDkhxT"
      data-testid="additional-controls"
    >
      <button
        class="sc-hLBbgP djRQit"
        data-testid="button"
        download=""
        href="abc.mp3"
      >
        <svg />
        download track
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioPlayer component tests snapshot with showLoopControl prop 1`] = `
<div
  class="sc-iBYQkv epJYkP"
  data-testid="audio-player"
  tabindex="0"
  title="audio-player"
>
  <audio
    src="abc.mp3"
    title="audio"
  >
    <source
      src="abc.ogg"
      type="audio/ogg"
    />
  </audio>
  <div
    class="sc-jrcTuL gdvQdq"
    data-testid="track-info"
  >
    <p
      class="sc-kDvujY laHBME"
      data-testid="track-name"
    />
    <p
      class="sc-ipEyDJ"
      data-testid="track-artist"
    />
  </div>
  <time
    class="sc-pyfCe iGkLUT"
    data-testid="time-bar"
  >
    00:00
    /
    00:00
  </time>
  <div
    class="sc-gKPRtg mrZYI sc-ftTHYK frwixp"
    data-testid="range-slider"
  >
    <input
      style="--progress-percent: 0%;"
      type="range"
    />
  </div>
  <div
    class="sc-gswNZR ipfQzw"
    data-testid="audio-controls"
  >
    <div
      class="sc-dkrFOg gMtPZj"
      data-testid="main-controls"
    >
      <button
        class="sc-hLBbgP eWuHc"
        data-testid="button"
      >
        <svg />
        play
      </button>
    </div>
    <div
      class="sc-jSUZER jBXoGo"
      data-testid="volume-controls"
    >
      <button
        class="sc-hLBbgP djRQit"
        data-testid="button"
      >
        <svg />
        mute
      </button>
      <div
        class="sc-gKPRtg mrZYI"
        data-testid="range-slider"
      >
        <input
          style="--progress-percent: 50%;"
          type="range"
          value="50"
        />
      </div>
    </div>
    <div
      class="sc-bcXHqe fDkhxT"
      data-testid="additional-controls"
    >
      <button
        class="sc-hLBbgP djRQit"
        data-testid="button"
      >
        <svg />
        repeat song infinite
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioPlayer component tests snapshot with showPlaybackRateControl prop 1`] = `
<div
  class="sc-iBYQkv epJYkP"
  data-testid="audio-player"
  tabindex="0"
  title="audio-player"
>
  <audio
    src="abc.mp3"
    title="audio"
  >
    <source
      src="abc.ogg"
      type="audio/ogg"
    />
  </audio>
  <div
    class="sc-jrcTuL gdvQdq"
    data-testid="track-info"
  >
    <p
      class="sc-kDvujY laHBME"
      data-testid="track-name"
    />
    <p
      class="sc-ipEyDJ"
      data-testid="track-artist"
    />
  </div>
  <time
    class="sc-pyfCe iGkLUT"
    data-testid="time-bar"
  >
    00:00
    /
    00:00
  </time>
  <div
    class="sc-gKPRtg mrZYI sc-ftTHYK frwixp"
    data-testid="range-slider"
  >
    <input
      style="--progress-percent: 0%;"
      type="range"
    />
  </div>
  <div
    class="sc-gswNZR ipfQzw"
    data-testid="audio-controls"
  >
    <div
      class="sc-dkrFOg gMtPZj"
      data-testid="main-controls"
    >
      <button
        class="sc-hLBbgP eWuHc"
        data-testid="button"
      >
        <svg />
        play
      </button>
    </div>
    <div
      class="sc-jSUZER jBXoGo"
      data-testid="volume-controls"
    >
      <button
        class="sc-hLBbgP djRQit"
        data-testid="button"
      >
        <svg />
        mute
      </button>
      <div
        class="sc-gKPRtg mrZYI"
        data-testid="range-slider"
      >
        <input
          style="--progress-percent: 50%;"
          type="range"
          value="50"
        />
      </div>
    </div>
    <div
      class="sc-bcXHqe fDkhxT"
      data-testid="additional-controls"
    >
      <button
        aria-label="current playback rate"
        class="sc-hLBbgP bbygWe sc-eDvSVe eCTlAt"
        data-testid="button"
      >
        1x
      </button>
    </div>
  </div>
</div>
`;
